Fixed crash when used on Firefox together with some other extensions
Added titles for script buttons